[package]
name = "graphql-strip-sensitive-literals"
version = "0.1.0"
edition = "2021"
description = "redact PII literals from a GraphQL query AST before logging/usage reporting"
license = "MIT"
repository = "https://github.com/hey-jj/graphql-strip-sensitive-literals"
readme = "README.md"
keywords = ["graphql", "redaction", "pii", "privacy", "ast"]
categories = ["parser-implementations", "web-programming"]

[dependencies]
# Provides the GraphQL AST, parser, and a printer that matches graphql-js
# formatting. Used for the document type, parsing, and serialization.
# `Document` from this crate is part of our public API, so the major version is
# a compatibility boundary. Pinned to the current minor so a consumer lockfile
# cannot pick an older 1.x that predates the AST shape this crate relies on.
apollo-compiler = "1.32"
